smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/mixins-with-mixin-local-traits.flattened.smithy
$version: "1.1"

namespace smithy.example

@sensitive
structure PublicShape {
    foo: String
}
