smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply/apply-block-missing-closing.smithy
// Parse error at line 7, column 1 near ``: Expected: '}'
$version: "2.0"
namespace com.foo

apply SomeShape {
    @deprecated
